@@ -2156,6 +2156,11 @@ void report_dynconf(aClient *sptr)
 	sendto_one(sptr, ":%s %i %s :throttle::period: %s", me.name, RPL_TEXT,
 			sptr->name, pretty_time_val(THROTTLING_PERIOD ? THROTTLING_PERIOD : 15));
 #endif
+	sendto_one(sptr, ":%s %i %s :anti-flood::unknown-flood-bantime: %s", me.name, RPL_TEXT,
+			sptr->name, pretty_time_val(UNKNOWN_FLOOD_BANTIME ? UNKNOWN_FLOOD_BANTIME : 600));
+	sendto_one(sptr, ":%s %i %s :anti-flood::unknown-flood-amount: %dKB", me.name, RPL_TEXT,
+			sptr->name, UNKNOWN_FLOOD_AMOUNT ? UNKNOWN_FLOOD_AMOUNT : 4);
+	
 }
 
 /* Report the network file info -codemastr */
@@ -4890,6 +4895,14 @@ int	_conf_set(ConfigFile *conf, ConfigEntry *ce)
 			}
 		}
 #endif
+		else if (!strcmp(cep->ce_varname, "anti-flood")) {
+			for (cepp = cep->ce_entries; cepp; cepp = cepp->ce_next) {
+				if (!strcmp(cepp->ce_varname, "unknown-flood-bantime")) 
+					tempiConf.unknown_flood_bantime = config_checkval(cepp->ce_vardata,CFG_TIME);
+				else if (!strcmp(cepp->ce_varname, "unknown-flood-amount"))
+					tempiConf.unknown_flood_amount = atol(cepp->ce_vardata);
+			}
+		}
 		else if (!strcmp(cep->ce_varname, "options")) {
 			for (cepp = cep->ce_entries; cepp; cepp = cepp->ce_next) {
 				if (!strcmp(cepp->ce_varname, "webtv-support")) {
@@ -5201,6 +5214,24 @@ int	_test_set(ConfigFile *conf, ConfigEntry *ce)
 			}
 		}
 #endif
+		else if (!strcmp(cep->ce_varname, "anti-flood")) {
+			for (cepp = cep->ce_entries; cepp; cepp = cepp->ce_next) {
+				CheckNull(cepp);
+				if (!strcmp(cepp->ce_varname, "unknown-flood-bantime")) {
+				}
+				else if (!strcmp(cepp->ce_varname, "unknown-flood-amount")) {
+				}
+				else
+				{
+					config_error("%s:%i: unknown option set::anti-flood::%s",
+						cepp->ce_fileptr->cf_filename,
+						cepp->ce_varlinenum,
+						cepp->ce_varname);
+					errors++;
+					continue;
+				}
+			}
+		}
 		else if (!strcmp(cep->ce_varname, "options")) {
 			for (cepp = cep->ce_entries; cepp; cepp = cepp->ce_next) {
 				if (!strcmp(cepp->ce_varname, "webtv-support")) {
